# hrmi

./: LICENSE  README.md
.github/workflows/: build.yml
examples/: sample.hrm  year_26_small_divide.hrm
examples/failure/: failure_empty_hand.hrm  failure_inbox_overflow.hrm  failure_invalid_outbox.hrm  failure_label_not_found.hrm  failure_out_of_lines.hrm  failure_var_not_found.hrm
examples/test/: test_jumpeq.hrm  test_jumpneq.hrm
src/: .gitignore  CMakeLists.txt  HRM.dev  Makefile  includes.h  interp.c  interp.h  main.c  parse.c  parse.h
src/collections/: alist.c  alist.h  hashtable.c  hashtable.h  stack.c  stack.h
src/common/: CMemLeak.c  CMemLeak.h  platformhelper.h  utils.c  utils.h
src/compiler/: ast.c  ast.h  astdata.c  astdata.h  parser.tab.h  parser.y  scanner.l  scanner.yy.h
utils/: .gitignore  build.bat  build.sh  install.sh
